--- a/lang/en.json
+++ b/lang/en.json
@@ -1,34 +1,34 @@
 {
     "(Default, Client)": "(Default, Client)",
     "(Full Administrator)": "(Full Administrator)",
-    "(Optional)": "(Optional)",
+    "(Optional)": "(Valinnainen)",
     "1 unit at": "1 unit at",
-    "2FA": "2FA",
+    "2FA": "Kaksivaiheinen Todennus",
     "A new paymenter beta version is available for download.": "A new paymenter beta version is available for download.",
     "A new paymenter stable version is available for download.": "A new paymenter stable version is available for download.",
     "A new verification link has been sent to the email address you provided during registration.": "A new verification link has been sent to the email address you provided during registration.",
     "A-Z": "A-Z",
-    "Account": "Account",
-    "Account API": "Account API",
-    "Account Security": "Account Security",
-    "Action": "Action",
-    "Actions": "Actions",
-    "Active": "Active",
-    "Active to": "Active to",
-    "Active until": "Active until",
-    "Add": "Add",
-    "Add Client": "Add Client",
-    "Add Credits": "Add Credits",
-    "Add Item": "Add Item",
-    "Add New": "Add New",
-    "Add new input": "Add new input",
-    "Add Product": "Add Product",
-    "Add Ticket": "Add Ticket",
-    "Address": "Address",
-    "Address..": "Address..",
-    "Admin": "Admin",
-    "Admin area": "Admin area",
-    "Admin Panel": "Admin Panel",
+    "Account": "Tili",
+    "Account API": "Tilin API",
+    "Account Security": "Tilin Turvallisuus",
+    "Action": "Toiminta",
+    "Actions": "Toiminnat",
+    "Active": "Aktiivinen",
+    "Active to": "Aktiivinen",
+    "Active until": "Aktiivinen Asti",
+    "Add": "Lisää",
+    "Add Client": "Lisää Asiakas",
+    "Add Credits": "Lisää Krediittejä",
+    "Add Item": "Lisää Asia",
+    "Add New": "Lisää Uusi",
+    "Add new input": "Lisää Uusi Syöttö",
+    "Add Product": "Lisää Tuote",
+    "Add Ticket": "Lisää Apulipuke",
+    "Address": "Katuosoite",
+    "Address..": "Katuosoite...",
+    "Admin": "Ylläpitäjä",
+    "Admin area": "Ylläpitäjän Alue",
+    "Admin Panel": "Ylläpitäjän Paneeli",
     "Admins have access to all areas of the application or can be restricted to specific areas.": "Admins have access to all areas of the application or can be restricted to specific areas.",
     "Affiliate": "Affiliate",
     "affiliate": "affiliate",
