--- a/lang/en.json
+++ b/lang/en.json
@@ -35,29 +35,29 @@
     "Affiliate System enabled": "Affiliate System enabled",
     "Affiliate Type": "Affiliate Type",
     "Affiliates can earn money by referring users to the site.": "Affiliates can earn money by referring users to the site.",
-    "All": "All",
-    "All clients": "All clients",
-    "All Clients": "All Clients",
-    "All Orders": "All Orders",
-    "All Products": "All Products",
-    "All Support": "All Support",
-    "All Tickets": "All Tickets",
-    "Allow Auto Language": "Allow Auto Language",
-    "Allow multiple quantities": "Allow multiple quantities",
+    "All": "Kaikki",
+    "All clients": "Kaikki Asiakkaat",
+    "All Clients": "Kaikki Asiakkaat",
+    "All Orders": "Kaikki Tilaukset",
+    "All Products": "Kaikki Tuotteet",
+    "All Support": "Kaikki Tuki",
+    "All Tickets": "Kaikki Apulipukkeet",
+    "Allow Auto Language": "Salli Automaattinen Kieli",
+    "Allow multiple quantities": "Salli Useita Määriä",
     "Allow upgrade of configurable options": "Allow upgrade of configurable options",
     "Already registered?": "Already registered?",
-    "Amount": "Amount",
+    "Amount": "Määrä",
     "Amount to pay": "Amount to pay",
     "An overview of everything": "An overview of everything",
-    "Announcement": "Announcement",
-    "Announcement Edit": "Announcement Edit",
-    "Announcement not found!": "Announcement not found!",
+    "Announcement": "Ilmoitus",
+    "Announcement Edit": "Ilmoituksen Muuttaminen",
+    "Announcement not found!": "Ilmoitusta ei löytynyt!",
     "Announcements": "Announcements",
     "Annually": "Annually",
     "Annually Setup Fee": "Annually Setup Fee",
     "API": "API",
     "Are you sure you want to cancel this product?": "Are you sure you want to cancel this product?",
-    "as paid": "as paid",
+    "as paid": "maksetuksi",
     "Assigned Order": "Assigned Order",
     "Assigned Products": "Assigned Products",
     "Assigned Products (not required)": "Assigned Products (not required)",
@@ -74,80 +74,80 @@
     "Browse extensions": "Browse extensions",
     "Browse Extensions": "Browse Extensions",
     "Browser Sessions": "Browser Sessions",
-    "Buy": "Buy",
-    "Cancel": "Cancel",
-    "Cancel Product": "Cancel Product",
-    "Cancellation Date": "Cancellation Date",
-    "Cancellation Date: ": "Cancellation Date: ",
-    "Cancellation Reason: ": "Cancellation Reason: ",
-    "Cancellation Type": "Cancellation Type",
-    "Cancelled": "Cancelled",
-    "Categories": "Categories",
-    "Categories Edit": "Categories Edit",
-    "Category": "Category",
-    "Category Description": "Category Description",
-    "Category not found!": "Category not found!",
-    "Change": "Change",
-    "Change Password": "Change Password",
-    "Change Price/Quantity": "Change Price/Quantity",
-    "Change price/quantity": "Change price/quantity",
-    "Change status": "Change status",
-    "Charge": "Charge",
+    "Buy": "Osta",
+    "Cancel": "Peruuta",
+    "Cancel Product": "Peruuta tilaus",
+    "Cancellation Date": "Peruutuspäivä",
+    "Cancellation Date: ": "Peruutuspäivä: ",
+    "Cancellation Reason: ": "Peruutussyy: ",
+    "Cancellation Type": "Peruutustyyppi",
+    "Cancelled": "Peruttu",
+    "Categories": "Kategoriat",
+    "Categories Edit": "Kategorian Muokkaus",
+    "Category": "Kategoria",
+    "Category Description": "Kategorian Lisätiedot",
+    "Category not found!": "Kategoriaa ei löytynyt!",
+    "Change": "Muuta",
+    "Change Password": "Vaihda Salasana",
+    "Change Price/Quantity": "Vaihda Hinta/Määrä",
+    "Change price/quantity": "Vaihda hinta/määrä",
+    "Change status": "Vaihda Tila",
+    "Charge": "Veloita",
     "Check to enable adding of funds by clients from the client area.": "Check to enable adding of funds by clients from the client area.",
-    "Checkout": "Checkout",
-    "City": "City",
-    "City..": "City..",
+    "Checkout": "Kassa",
+    "City": "Kaupunki",
+    "City..": "Kaupunki...",
     "Click here to learn how to setup cronjob.": "Click here to learn how to setup cronjob.",
-    "Client": "Client",
-    "Client area": "Client area",
-    "Client Details": "Client Details",
-    "Client:": "Client:",
-    "Clients": "Clients",
-    "Close": "Close",
-    "Close Ticket": "Close Ticket",
-    "Closed": "Closed",
-    "Closed Tickets": "Closed Tickets",
+    "Client": "Asiakas",
+    "Client area": "Asiakasalue",
+    "Client Details": "Asiakkaan Tiedot",
+    "Client:": "Asiakas:",
+    "Clients": "Asiakkaat",
+    "Close": "Sulje",
+    "Close Ticket": "Sulje Apulipuke",
+    "Closed": "Suljettu",
+    "Closed Tickets": "Suljetut Apulipukkeet",
     "Cloudflare Turnstile": "Cloudflare Turnstile",
-    "Code": "Code",
-    "company": "company",
-    "Company Details (Optional)": "Company Details (Optional)",
-    "Company Name": "Company Name",
-    "Company Names": "Company Names",
-    "Completed": "Completed",
-    "Configurable Options": "Configurable Options",
-    "Confirm": "Confirm",
-    "Confirm Cancellation": "Confirm Cancellation",
-    "Confirm New Password": "Confirm New Password",
-    "Confirm Password": "Confirm Password",
-    "Continue": "Continue",
-    "Continue to Checkout": "Continue to Checkout",
-    "Copied!": "Copied!",
-    "Copy": "Copy",
-    "Cost": "Cost",
-    "Country": "Country",
-    "Coupon": "Coupon",
-    "Coupon:": "Coupon:",
-    "Coupons": "Coupons",
-    "Create": "Create",
-    "Create a new ticket.": "Create a new ticket.",
-    "Create an account.": "Create an account.",
-    "Create Announcement": "Create Announcement",
-    "Create category": "Create category",
-    "Create client": "Create client",
-    "Create Client": "Create Client",
-    "Create Coupon": "Create Coupon",
-    "Create Invoice": "Create Invoice",
-    "Create new Configurable Option Group": "Create new Configurable Option Group",
-    "Create new Option": "Create new Option",
-    "Create Product": "Create Product",
+    "Code": "Koodi",
+    "company": "yritys",
+    "Company Details (Optional)": "Yrityksen Tiedot (Valinnainen)",
+    "Company Name": "Yrityksen nimi",
+    "Company Names": "Yrityksen nimet",
+    "Completed": "Suoritettu",
+    "Configurable Options": "Säädettävät ominaisuudet",
+    "Confirm": "Vahvista",
+    "Confirm Cancellation": "Vahvista Peruutus",
+    "Confirm New Password": "Vahvista uusi salasana",
+    "Confirm Password": "Vahvista salasana",
+    "Continue": "Jatka",
+    "Continue to Checkout": "Jatka Kassalle",
+    "Copied!": "Kopioitu!",
+    "Copy": "Kopioi",
+    "Cost": "Hinta",
+    "Country": "Maa",
+    "Coupon": "Kuponki",
+    "Coupon:": "Kuponki:",
+    "Coupons": "Kupongit",
+    "Create": "Luo",
+    "Create a new ticket.": "Luo uusi apulipuke.",
+    "Create an account.": "Luo Tili.",
+    "Create Announcement": "Luo Ilmoitus",
+    "Create category": "Luo Kategoria",
+    "Create client": "Luo Asiakas",
+    "Create Client": "Luo Asiakas",
+    "Create Coupon": "Luo Kuponki",
+    "Create Invoice": "Luo Lasku",
+    "Create new Configurable Option Group": "Luo säädettävien ominaisuuksien ryhmä",
+    "Create new Option": "Luo uusi vaihtoehto",
+    "Create Product": "Luo Tuote",
     "Create server in extension": "Create server in extension",
     "Create Tax Rate": "Create Tax Rate",
-    "Create Ticket": "Create Ticket",
-    "Created": "Created",
-    "Created At": "Created At",
-    "Created at": "Created at",
-    "Created Date": "Created Date",
-    "Creating a new role": "Creating a new role",
+    "Create Ticket": "Luo Apulipuke",
+    "Created": "Luotu",
+    "Created At": "Luotu",
+    "Created at": "Luotu",
+    "Created Date": "Luomispäivämäärä",
+    "Creating a new role": "Lisäät uutta roolia",
     "Credit system enabled": "Credit system enabled",
     "Credits": "Credits",
     "credits": "credits",
@@ -165,7 +165,7 @@
     "Custom Link": "Custom Link",
     "Custom Link (The user sets his own code)": "Custom Link (The user sets his own code)",
     "Customer Area": "Customer Area",
-    "Dashboard": "Dashboard",
+    "Dashboard": "Kojelauta",
     "Date": "Date",
     "Date of Issue": "Date of Issue",
     "Days after which an unpaid server will remove itself": "Days after which an unpaid server will remove itself",
